fixing unit tests